final resource page

--- a/other-resources.html
+++ b/other-resources.html
@@ -69,13 +69,13 @@
     <section class="probootstrap-section probootstrap-section-colored">
       <div class="container">
         <div class="row">
-          <div class="col-md-12 text-left section-heading probootstrap-animate">
+          <div class="col-md-12 text-left section-heading probootstrap-animate mb0">
             <h1>Other Resources</h1>
           </div>
         </div>
       </div>
     </section>
-    
+
 
     <section class="probootstrap-section probootstrap-section-sm">
       <div class="container">
@@ -83,18 +83,26 @@
           <div class="col-md-12">
             <div class="row probootstrap-gutter0">
               <div class="col-md-7 col-md-push-1  probootstrap-animate" id="probootstrap-content">
+                <h2><a href="https://www.scu.edu/osl/food-insecurity-program/">SCU Food Insecurity Program</a></h2>
+                  <p>Through the program, students have the opportunity to gain access to the Bronco Pantry,
+                    donated gift cards to local stores, and are offered individual consultation sessions to gain access
+                    to additional community resources. The Bronco Pantry regularly stocks non-perishable food items and
+                    fresh produce in partnership with the SCU Forge Garden.</p>
                 <h2><a href="https://www.scu.edu/sustainability/programs/theforge/">Forge Garden Farm Stand</a></h2>
                   <p>The Forge Garden Farm Stand is every Friday:
-                  <br>-11:30 a.m. to 12:30 p.m. - Student Hour: Please provide valid student ID when shopping at the farm stand
+                  <br>-11:30 a.m. to 12:30 p.m. - Student Hour: Please provide valid student ID when shopping at the
+                  farm stand
                   <br>-12:30 p.m. to 1:30 p.m. - Community Hour: All are welcome to shop the farm stand</p>
-                <p>The Forge Farm Stand provides affordable, Certified Organic produce grown in its ½ acre
+                  <p>The Forge Farm Stand provides affordable, Certified Organic produce grown in its ½ acre
                   garden. The Farm Stand is sliding scale, donation-based. This means you pay what you can
                   afford. No one will be turned away for lack of funds. The first hour of the farm stand is
                   reserved for SCU students only. The farm stand is held at The Forge Garden except for the
-                  first week of the month, it is held as a pop-up at an alternative location.
-                </p>
-                <h2><a href="https://www.scu.edu/osl/food-insecurity-program/">SCU Food Insecurity Program</a></h2>
-                  <p>Through the program, students have the opportunity to gain access to the Bronco Pantry, donated gift cards to local stores, and are offered individual consultation sessions to gain access to additional community resources. The Bronco Pantry regularly stocks non-perishable food items and fresh produce in partnership with the SCU Forge Garden.</p>
+                  first week of the month, it is held as a pop-up at an alternative location.</p>
+                <h2>2-1-1</h2>
+                  <p>If you are in immediate need of food assistance, please dial 2-1-1 from a phone and
+                    speak with someone about services available in your area (2-1-1 is a three-digit
+                    dialing code, similar to 4-1-1). Lines are open 24 hours a day. Most but not all areas
+                    provide 2-1-1 phone support.</p>
                 <h2><a href="https://www.getcalfresh.org/">CalFresh</a></h2>
                   <p>California's food stamps (SNAP) program</p>
                   <ol>
@@ -108,21 +116,18 @@
                     <li>Proof of any income
                     <li>Proof of immigration status (for non-citizens)
                   </ul>
-                <h2><a href="https://eatfresh.org/">EatFresh.org</a></h2>
-                  <p>EatFresh.org is an online recipe and nutrition resource for anyone who wants to improve their health. EatFresh.org is a project of the California Department of Social Services SNAP-Ed program.
-                  <br>- Find healthy recipes for all food groups
-                  <br>- Find dietitian recommendations and advice</p>
                 <h2><a href="https://www.shfb.org/">Second Harvest of Silicon Valley Food Bank</a></h2>
                   <p>Call 800-984-3663</p>
                   <p>1691 The Alameda, San Jose, CA 95126
                   <br>One block off campus!</p>
                 <h2><a href="https://www.shfb.org/nutrition-center/recipes/">SHFB Recipe Page</a></h2>
-                  <p>Find recipes for healthy and filling meals</p>
-                <h2>2-1-1</h2>
-                  <p>If you are in immediate need of food assistance, please dial 2-1-1 from a phone and
-                    speak with someone about services available in your area (2-1-1 is a three-digit
-                    dialing code, similar to 4-1-1). Lines are open 24 hours a day. Most but not all areas
-                    provide 2-1-1 phone support.</p>
+                  <p>Find recipes for healthy and filling meals</p>     
+                <h2><a href="https://eatfresh.org/">EatFresh.org</a></h2>
+                  <p>EatFresh.org is an online recipe and nutrition resource for anyone who wants to improve
+                    their health. EatFresh.org is a project of the California Department of Social Services
+                    SNAP-Ed program.
+                  <br>- Find healthy recipes for all food groups
+                  <br>- Find dietitian recommendations and advice</p>
                 <h2><a href="https://uvfm.org/santa-clara-saturdays">Franklin Sqaure Farmers Market</a></h2>
                   <p>Saturdays
                   <br>9am-1pm
