--- a/index.html
+++ b/index.html
@@ -182,70 +182,38 @@
         <div class="row">
           <div class="col-md-3 col-sm-6">
             <div class="probootstrap-teacher text-center probootstrap-animate">
-              <figure class="media">
-                <img src="img/person_1.jpg" alt="Free Bootstrap Template by uicookies.com" class="img-responsive">
-              </figure>
               <div class="text">
-                <h3>Chris Worth</h3>
-                <p>Physical Education</p>
-                <ul class="probootstrap-footer-social">
-                  <li class="twitter"><a href="#"><i class="icon-twitter"></i></a></li>
-                  <li class="facebook"><a href="#"><i class="icon-facebook2"></i></a></li>
-                  <li class="instagram"><a href="#"><i class="icon-instagram2"></i></a></li>
-                  <li class="google-plus"><a href="#"><i class="icon-google-plus"></i></a></li>
-                </ul>
+                <h2>Chris Worth</h2>
+                <h3>100 points to offer</h3>
+                <p>cworth@scu.edu</p>
               </div>
             </div>
           </div>
           <div class="col-md-3 col-sm-6">
             <div class="probootstrap-teacher text-center probootstrap-animate">
-              <figure class="media">
-                <img src="img/person_5.jpg" alt="Free Bootstrap Template by uicookies.com" class="img-responsive">
-              </figure>
               <div class="text">
-                <h3>Janet Morris</h3>
-                <p>English Teacher</p>
-                <ul class="probootstrap-footer-social">
-                  <li class="twitter"><a href="#"><i class="icon-twitter"></i></a></li>
-                  <li class="facebook"><a href="#"><i class="icon-facebook2"></i></a></li>
-                  <li class="instagram"><a href="#"><i class="icon-instagram2"></i></a></li>
-                  <li class="google-plus"><a href="#"><i class="icon-google-plus"></i></a></li>
-                </ul>
+                <h2>Darin Brooks</h2>
+                <h3>90 points to offer</h3>
+                <p>dbrooks@scu.edu</p>
               </div>
             </div>
           </div>
           <div class="clearfix visible-sm-block visible-xs-block"></div>
           <div class="col-md-3 col-sm-6">
             <div class="probootstrap-teacher text-center probootstrap-animate">
-              <figure class="media">
-                <img src="img/person_6.jpg" alt="Free Bootstrap Template by uicookies.com" class="img-responsive">
-              </figure>
               <div class="text">
-                <h3>Linda Reyez</h3>
-                <p>Math Teacher</p>
-                <ul class="probootstrap-footer-social">
-                  <li class="twitter"><a href="#"><i class="icon-twitter"></i></a></li>
-                  <li class="facebook"><a href="#"><i class="icon-facebook2"></i></a></li>
-                  <li class="instagram"><a href="#"><i class="icon-instagram2"></i></a></li>
-                  <li class="google-plus"><a href="#"><i class="icon-google-plus"></i></a></li>
-                </ul>
+                <h2>Jasmine Molina</h2>
+                <h3>80 points to offer</h3>
+                <p>jmolina@scu.edu</p>
               </div>
             </div>
           </div>
           <div class="col-md-3 col-sm-6">
             <div class="probootstrap-teacher text-center probootstrap-animate">
-              <figure class="media">
-                <img src="img/person_7.jpg" alt="Free Bootstrap Template by uicookies.com" class="img-responsive">
-              </figure>
               <div class="text">
-                <h3>Jessa Sy</h3>
-                <p>Physics Teacher</p>
-                <ul class="probootstrap-footer-social">
-                  <li class="twitter"><a href="#"><i class="icon-twitter"></i></a></li>
-                  <li class="facebook"><a href="#"><i class="icon-facebook2"></i></a></li>
-                  <li class="instagram"><a href="#"><i class="icon-instagram2"></i></a></li>
-                  <li class="google-plus"><a href="#"><i class="icon-google-plus"></i></a></li>
-                </ul>
+                <h2>Suzie Cross</h2>
+                <h3>70 points to offer</h3>
+                <p>scross@scu.edu</p>
               </div>
             </div>
           </div>
