--- a/about.html
+++ b/about.html
@@ -85,11 +85,10 @@
                 <div class="text-uppercase probootstrap-uppercase">The Problem</div>
                 <h3>Where We Begin</h3>
                 <p>
-                  As a quarter comes to an end, many Broncos with 
-                  extra meal points are faced with a dilemma. Do I
-                  buy into the consumerist culture and waste extra dining
-                  points on packs of Yerba Mate? Or, do I just let
-                  it go to waste?
+                  As each quarter comes to an end, many Broncos end up with
+                  a ton of extra meal points. The majority will splurge and
+                  spend the extra meal points on whatever they can grab in
+                  the cellar, but not every student has this luxury.
                 </p>
                 <p><a href="#" class="btn btn-primary">Learn More</a></p>
               </div>
@@ -107,15 +106,10 @@
 
     <section class="probootstrap-section">
       <div class="container">
-
-        <div class="col-md-6">
-          <p>
-            <img src="img/slider_1.jpg" alt="Free Bootstrap Template by uicookes.com" class="img-responsive">
-          </p>
-        </div>
-        <div class="col-md-6 col-md-push-1">
+        <div class="col-md-10 col-md-push-2">
           <h2>We actively address food insecurity on campus</h2>
-          <p>Food pantries can only provide certain food items, and it does not provide solution for immediate hunger.</p>
+          <p>Food pantries can only provide certain food items, and it does not provide solution for immediate hunger.
+          </p>
         </div>
 
 
@@ -258,7 +252,7 @@
       </div>
     </footer>
 
-</div>
+  </div>
   <!-- END wrapper -->
 
   <script src="js/scripts.min.js"></script>
