--- a/calendar.html
+++ b/calendar.html
@@ -5,10 +5,6 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Calendar</title>
-  <meta name="description" content="Free Bootstrap Theme by uicookies.com">
-  <meta name="keywords"
-    content="free website templates, free bootstrap themes, free template, free bootstrap, free website template">
-
   <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700|Open+Sans" rel="stylesheet">
   <link rel="stylesheet" href="css/styles-merged.css">
   <link rel="stylesheet" href="css/style.css">
@@ -51,7 +47,7 @@
           <ul class="nav navbar-nav navbar-right">
             <li><a href="index.html">Home</a></li>
             <li><a href="offers.html">Offers</a></li>
-            <li class = "active"><a href="calendar.html">Calendar</a></li>
+            <li class="active"><a href="calendar.html">Calendar</a></li>
             <li class="dropdown">
               <a href="#" data-toggle="dropdown" class="dropdown-toggle">Additional Resources</a>
               <ul class="dropdown-menu">
@@ -84,7 +80,9 @@
               <div class="probootstrap-text probootstrap-animate">
                 <div class="text-uppercase probootstrap-uppercase">BroncoShare Recommended Events</div>
                 <h3>Community Events</h3>
-                <p>We've collected hours for nearby places where you can buy food around Santa Clara University. The Forge Garden works on a donation-based system, and student offers can help to get food from Benson.</p>
+                <p>We've collected hours for nearby places where you can buy food around Santa Clara University. The
+                  Forge Garden works on a donation-based system, and student offers can help to get food from Benson.
+                </p>
                 <p><a href="other-resources.html" class="btn btn-primary">Learn More</a></p>
               </div>
             </div>
@@ -93,67 +91,71 @@
       </div>
     </section>
 
-    <p align="center"><iframe src="https://calendar.google.com/calendar/embed?src=c_osbvtgj4k5vprbocd0dm1lpgbg%40group.calendar.google.com&ctz=America%2FLos_Angeles" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe></p>
+    <p align="center"><iframe
+        src="https://calendar.google.com/calendar/embed?src=c_osbvtgj4k5vprbocd0dm1lpgbg%40group.calendar.google.com&ctz=America%2FLos_Angeles"
+        style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe></p>
     <p></p>
-    <p align="center"><iframe src="https://calendar.google.com/calendar/embed?src=k7km3664f0c04d6028io9nm6pk%40group.calendar.google.com&ctz=America%2FLos_Angeles" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe></p>
+    <p align="center"><iframe
+        src="https://calendar.google.com/calendar/embed?src=k7km3664f0c04d6028io9nm6pk%40group.calendar.google.com&ctz=America%2FLos_Angeles"
+        style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe></p>
 
-  
-  <footer class="probootstrap-footer probootstrap-bg">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-4">
-          <div class="probootstrap-footer-widget">
-            <h3>About The Program</h3>
-            <p>Bronco Share is a new method to address pervasive food insecurity at Santa Clara University.</p>
 
-          </div>
-        </div>
-        <div class="col-md-3 col-md-push-1">
-          <div class="probootstrap-footer-widget">
-            <h3>Links</h3>
-            <ul>
-              <li><a href="index.html">Home</a></li>
-              <li><a href="offers.html">Offers</a></li>
-              <li><a href="calendar.html">Calendar</a></li>
-              <li><a href="other-resources.html">Additional Resources</a></li>
-              <li><a href="new-offer.html">Post an Offer</a></li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="probootstrap-footer-widget">
-            <h3>Contact Info</h3>
-            <ul class="probootstrap-contact-info">
-              <li><i class="icon-location2"></i> <span>500 El Camino Real, Santa Clara CA 95053</span></li>
-              <li><i class="icon-mail"></i><span>broncoshare@scu.edu</span></li>
-
-            </ul>
-          </div>
-        </div>
-
-      </div>
-      <!-- END row -->
-
-    </div>
-
-    <div class="probootstrap-copyright">
+    <footer class="probootstrap-footer probootstrap-bg">
       <div class="container">
         <div class="row">
-          <div class="col-md-8 text-left">
-            <p>&copy; 2017 <a href="https://uicookies.com/">uiCookies:Enlight</a>. All Rights Reserved. Designed
-              &amp;
-              Developed with <i class="icon icon-heart"></i> by <a href="https://uicookies.com/">uicookies.com</a>
-            </p>
+          <div class="col-md-4">
+            <div class="probootstrap-footer-widget">
+              <h3>About The Program</h3>
+              <p>Bronco Share is a new method to address pervasive food insecurity at Santa Clara University.</p>
+
+            </div>
           </div>
-          <div class="col-md-4 probootstrap-back-to-top">
-            <p><a href="#" class="js-backtotop">Back to top <i class="icon-arrow-long-up"></i></a></p>
+          <div class="col-md-3 col-md-push-1">
+            <div class="probootstrap-footer-widget">
+              <h3>Links</h3>
+              <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="offers.html">Offers</a></li>
+                <li><a href="calendar.html">Calendar</a></li>
+                <li><a href="other-resources.html">Additional Resources</a></li>
+                <li><a href="new-offer.html">Post an Offer</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="probootstrap-footer-widget">
+              <h3>Contact Info</h3>
+              <ul class="probootstrap-contact-info">
+                <li><i class="icon-location2"></i> <span>500 El Camino Real, Santa Clara CA 95053</span></li>
+                <li><i class="icon-mail"></i><span>broncoshare@scu.edu</span></li>
+
+              </ul>
+            </div>
+          </div>
+
+        </div>
+        <!-- END row -->
+
+      </div>
+
+      <div class="probootstrap-copyright">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-8 text-left">
+              <p>&copy; 2017 <a href="https://uicookies.com/">uiCookies:Enlight</a>. All Rights Reserved. Designed
+                &amp;
+                Developed with <i class="icon icon-heart"></i> by <a href="https://uicookies.com/">uicookies.com</a>
+              </p>
+            </div>
+            <div class="col-md-4 probootstrap-back-to-top">
+              <p><a href="#" class="js-backtotop">Back to top <i class="icon-arrow-long-up"></i></a></p>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-  </footer>
+    </footer>
 
-</div>
+  </div>
   <!-- END wrapper -->
 
 
