--- a/other-resources.html
+++ b/other-resources.html
@@ -5,10 +5,6 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Other Resources</title>
-  <meta name="description" content="Free Bootstrap Theme by uicookies.com">
-  <meta name="keywords"
-    content="free website templates, free bootstrap themes, free template, free bootstrap, free website template">
-
   <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700|Open+Sans" rel="stylesheet">
   <link rel="stylesheet" href="css/styles-merged.css">
   <link rel="stylesheet" href="css/style.css">
@@ -84,63 +80,68 @@
             <div class="row probootstrap-gutter0">
               <div class="col-md-7 col-md-push-1  probootstrap-animate" id="probootstrap-content">
                 <h2><a href="https://www.scu.edu/osl/food-insecurity-program/">SCU Food Insecurity Program</a></h2>
-                  <p>Through the program, students have the opportunity to gain access to the Bronco Pantry,
-                    donated gift cards to local stores, and are offered individual consultation sessions to gain access
-                    to additional community resources. The Bronco Pantry regularly stocks non-perishable food items and
-                    fresh produce in partnership with the SCU Forge Garden.</p>
+                <p>Through the program, students have the opportunity to gain access to the Bronco Pantry,
+                  donated gift cards to local stores, and are offered individual consultation sessions to gain access
+                  to additional community resources. The Bronco Pantry regularly stocks non-perishable food items and
+                  fresh produce in partnership with the SCU Forge Garden.</p>
                 <h2><a href="https://www.scu.edu/sustainability/programs/theforge/">Forge Garden Farm Stand</a></h2>
-                  <p>The Forge Garden Farm Stand is every Friday:
+                <p>The Forge Garden Farm Stand is every Friday:
                   <br>-11:30 a.m. to 12:30 p.m. - Student Hour: Please provide valid student ID when shopping at the
                   farm stand
-                  <br>-12:30 p.m. to 1:30 p.m. - Community Hour: All are welcome to shop the farm stand</p>
-                  <p>The Forge Farm Stand provides affordable, Certified Organic produce grown in its ½ acre
+                  <br>-12:30 p.m. to 1:30 p.m. - Community Hour: All are welcome to shop the farm stand
+                </p>
+                <p>The Forge Farm Stand provides affordable, Certified Organic produce grown in its ½ acre
                   garden. The Farm Stand is sliding scale, donation-based. This means you pay what you can
                   afford. No one will be turned away for lack of funds. The first hour of the farm stand is
                   reserved for SCU students only. The farm stand is held at The Forge Garden except for the
                   first week of the month, it is held as a pop-up at an alternative location.</p>
                 <h2>2-1-1</h2>
-                  <p>If you are in immediate need of food assistance, please dial 2-1-1 from a phone and
-                    speak with someone about services available in your area (2-1-1 is a three-digit
-                    dialing code, similar to 4-1-1). Lines are open 24 hours a day. Most but not all areas
-                    provide 2-1-1 phone support.</p>
+                <p>If you are in immediate need of food assistance, please dial 2-1-1 from a phone and
+                  speak with someone about services available in your area (2-1-1 is a three-digit
+                  dialing code, similar to 4-1-1). Lines are open 24 hours a day. Most but not all areas
+                  provide 2-1-1 phone support.</p>
                 <h2><a href="https://www.getcalfresh.org/">CalFresh</a></h2>
-                  <p>California's food stamps (SNAP) program</p>
-                  <ol>
-                    <li>Apply - Your county will call you within a week or two for an eligibility interview</li>
-                    <li>Get money - If approved, you will get an EBT card for groceries within 10 days</li>
-                    <li>Buy groceries - EBT cards work in most food stores and farmers’ markets</li>
-                  </ol>
-                  <p>What will you need?</p>
-                  <ul>
-                    <li>A copy of your ID
-                    <li>Proof of any income
-                    <li>Proof of immigration status (for non-citizens)
-                  </ul>
+                <p>California's food stamps (SNAP) program</p>
+                <ol>
+                  <li>Apply - Your county will call you within a week or two for an eligibility interview</li>
+                  <li>Get money - If approved, you will get an EBT card for groceries within 10 days</li>
+                  <li>Buy groceries - EBT cards work in most food stores and farmers’ markets</li>
+                </ol>
+                <p>What will you need?</p>
+                <ul>
+                  <li>A copy of your ID
+                  <li>Proof of any income
+                  <li>Proof of immigration status (for non-citizens)
+                </ul>
                 <h2><a href="https://www.shfb.org/">Second Harvest of Silicon Valley Food Bank</a></h2>
-                  <p>Call 800-984-3663</p>
-                  <p>1691 The Alameda, San Jose, CA 95126
-                  <br>One block off campus!</p>
+                <p>Call 800-984-3663</p>
+                <p>1691 The Alameda, San Jose, CA 95126
+                  <br>One block off campus!
+                </p>
                 <h2><a href="https://www.shfb.org/nutrition-center/recipes/">SHFB Recipe Page</a></h2>
-                  <p>Find recipes for healthy and filling meals</p>     
+                <p>Find recipes for healthy and filling meals</p>
                 <h2><a href="https://eatfresh.org/">EatFresh.org</a></h2>
-                  <p>EatFresh.org is an online recipe and nutrition resource for anyone who wants to improve
-                    their health. EatFresh.org is a project of the California Department of Social Services
-                    SNAP-Ed program.
+                <p>EatFresh.org is an online recipe and nutrition resource for anyone who wants to improve
+                  their health. EatFresh.org is a project of the California Department of Social Services
+                  SNAP-Ed program.
                   <br>- Find healthy recipes for all food groups
-                  <br>- Find dietitian recommendations and advice</p>
+                  <br>- Find dietitian recommendations and advice
+                </p>
                 <h2><a href="https://uvfm.org/santa-clara-saturdays">Franklin Sqaure Farmers Market</a></h2>
-                  <p>Saturdays
+                <p>Saturdays
                   <br>9am-1pm
-                  <br>950 Jackson St, Santa Clara, CA 95050</p>
+                  <br>950 Jackson St, Santa Clara, CA 95050
+                </p>
                 <h2><a href="https://www.wcfma.org/rose-garden">Rose Garden Farmers Market</a></h2>
-                  <p>Saturdays
+                <p>Saturdays
                   <br>9am-1pm
-                  <br>577 Dana Street, San Jose, CA 95126</p>
+                  <br>577 Dana Street, San Jose, CA 95126
+                </p>
                 <h2><a href="https://ecologycenter.org/fmfinder/">Farmers Market Finder</a></h2>
-                  <p>Find a farmers market near you!</p>
+                <p>Find a farmers market near you!</p>
                 <h2><a href="https://www.findhelp.org/">FindHelp.org</a></h2>
-                  <p>Search and connect to support. Financial assistance, food pantries, medical care,
-                    and other free or reduced-cost help starts here</p>
+                <p>Search and connect to support. Financial assistance, food pantries, medical care,
+                  and other free or reduced-cost help starts here</p>
               </div>
             </div>
           </div>
@@ -173,7 +174,7 @@
               <h3>Contact Info</h3>
               <ul class="probootstrap-contact-info">
                 <li><i class="icon-location2"></i> <span>500 El Camino Real
-                  <br>Santa Clara, CA 95053</span></li>
+                    <br>Santa Clara, CA 95053</span></li>
                 <li><i class="icon-mail"></i><span>broncoshare@scu.edu</span></li>
 
               </ul>
@@ -186,23 +187,23 @@
 
 
         <div class="probootstrap-copyright">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-8 text-left">
-              <p>&copy; 2017 <a href="https://uicookies.com/">uiCookies:Enlight</a>. All Rights Reserved. Designed
-                &amp;
-                Developed with <i class="icon icon-heart"></i> by <a href="https://uicookies.com/">uicookies.com</a>
-              </p>
-            </div>
-            <div class="col-md-4 probootstrap-back-to-top">
-              <p><a href="#" class="js-backtotop">Back to top <i class="icon-arrow-long-up"></i></a></p>
+          <div class="container">
+            <div class="row">
+              <div class="col-md-8 text-left">
+                <p>&copy; 2017 <a href="https://uicookies.com/">uiCookies:Enlight</a>. All Rights Reserved. Designed
+                  &amp;
+                  Developed with <i class="icon icon-heart"></i> by <a href="https://uicookies.com/">uicookies.com</a>
+                </p>
+              </div>
+              <div class="col-md-4 probootstrap-back-to-top">
+                <p><a href="#" class="js-backtotop">Back to top <i class="icon-arrow-long-up"></i></a></p>
+              </div>
             </div>
           </div>
         </div>
-      </div>
     </footer>
 
-</div>
+  </div>
   <!-- END wrapper -->
 
 
