change stat icons

--- a/about.html
+++ b/about.html
@@ -97,18 +97,13 @@
       </div>
     </section>
 
-
-
-
     <section class="probootstrap-section">
       <div class="container">
-        <div class="col-md-10 col-md-push-2">
+        <div class="text-center">
           <h2>We actively address food insecurity on campus</h2>
           <p>Food pantries can only provide certain food items, and it does not provide solution for immediate hunger.
           </p>
         </div>
-
-
       </div>
     </section>
 
