--- a/food-insecurity.html
+++ b/food-insecurity.html
@@ -76,57 +76,50 @@
       <div class="container">
         <div class="row">
           <div class="col-md-6 col-md-offset-3 text-center section-heading probootstrap-animate">
-
-            <p class="lead">Food insecurity is a major problem facing many SCU students. A 2021 study of over 400
-              students at Santa Clara University found that:</p>
+            <h4>Food insecurity is a major problem facing many SCU students. A 2021 study of over 400
+              students at Santa Clara University found that:</h4>
           </div>
         </div>
         <div class="row">
           <div class="col-md-6">
             <div class="service left-icon probootstrap-animate">
-              <div class="icon"><i class="icon-checkmark"></i></div>
+              <div class="icon"><i class="icon-chevron-right"></i></div>
               <div class="text">
-
                 <h3>20% of students experienced food insecurity at some point while at SCU.</h3>
               </div>
             </div>
             <div class="service left-icon probootstrap-animate">
-              <div class="icon"><i class="icon-checkmark"></i></div>
+              <div class="icon"><i class="icon-chevron-right"></i></div>
               <div class="text">
-
                 <h3>In fall of 2020, 19% of respondents were considered food insecure.</h3>
               </div>
             </div>
             <div class="service left-icon probootstrap-animate">
-              <div class="icon"><i class="icon-checkmark"></i></div>
+              <div class="icon"><i class="icon-chevron-right"></i></div>
               <div class="text">
-
                 <h3>BIPOC students were more likely to experience food insecurity at SCU.</h3>
               </div>
             </div>
           </div>
           <div class="col-md-6">
             <div class="service left-icon probootstrap-animate">
-              <div class="icon"><i class="icon-checkmark"></i></div>
+              <div class="icon"><i class="icon-chevron-right"></i></div>
               <div class="text">
-
                 <h3>14% of respondents were experiencing both food and housing insecurity.</h3>
               </div>
             </div>
 
             <div class="service left-icon probootstrap-animate">
-              <div class="icon"><i class="icon-checkmark"></i></div>
+              <div class="icon"><i class="icon-chevron-right"></i></div>
               <div class="text">
-
                 <h3>Under 30% of respondents were aware of SCU’s Food Insecurity Program</h3>
               </div>
             </div>
-
-
           </div>
-
         </div>
       </div>
+
+      <br><br><br>
 
       <footer class="probootstrap-footer probootstrap-bg">
         <div class="container">
