change offer form slightly

--- a/new-offer.html
+++ b/new-offer.html
@@ -101,10 +101,11 @@
                   </div>
                   <div class="form-group">
                     <label for="subject">Number of Points</label>
-                    <input type="text" class="form-control" id="subject" name="subject">
+                    <input type="text" class="form-control" id="subject" name="subject"
+                      placeholder="Points you'd like to offer, not your total">
                   </div>
                   <div class="form-group">
-                    <label for="email">Contact Details</label>
+                    <label for="email">SCU email</label>
                     <input type="email" class="form-control" id="email" name="email">
                   </div>
                   <div class="form-group">
