clean up about.html

--- a/about.html
+++ b/about.html
@@ -111,11 +111,15 @@
     <section class="probootstrap-section">
       <div class="container">
         <div class="row">
-          <div class="col-md-6 col-md-offset-3 text-center section-heading probootstrap-animate">
+          <div class="col-md-6 col-md-offset-3 text-center probootstrap-animate">
             <h2>Why Choose Bronco Share</h2>
-            <p class="lead">Get a Benson Meal or something from the Cellar with others' points!</p>
+            <p class="lead">Connect with another student at Santa Clara University who can provide you a meal any time!
+            </p>
           </div>
         </div>
+        <br><br><br>
+        <!--delete when adding the additional info below-->
+        <!--
         <div class="row">
           <div class="col-md-6">
             <div class="service left-icon probootstrap-animate">
@@ -173,6 +177,7 @@
 
           </div>
         </div>
+        end comment for stats for later-->
         <!-- END row -->
       </div>
     </section>
@@ -182,8 +187,8 @@
         <div class="row">
           <div class="col-md-12">
             <h2 class="probootstrap-animate" data-animate-effect="fadeInRight">Share your meal points!</h2>
-            <a href="#" role="button" class="btn btn-primary btn-lg btn-ghost probootstrap-animate"
-              data-animate-effect="fadeInLeft">Enroll</a>
+            <a href="new-offer.html" role="button" class="btn btn-primary btn-lg btn-ghost probootstrap-animate"
+              data-animate-effect="fadeInLeft">Post An Offer</a>
           </div>
         </div>
       </div>
@@ -206,7 +211,7 @@
                 <li><a href="offers.html">Offers</a></li>
                 <li><a href="calendar.html">Calendar</a></li>
                 <li><a href="other-resources.html">Other Resources</a></li>
-                <li><a href="new-offer.html">Post an Offer</a></li>
+                <li><a href="new-offer.html">Post An Offer</a></li>
               </ul>
             </div>
           </div>
