sqlite creation with console input

--- a/offers.html
+++ b/offers.html
@@ -121,7 +121,7 @@
           <div class="col-md-3 col-sm-6">
             <div class="probootstrap-teacher text-center probootstrap-animate">
               <div class="text">
-                <h2>Rob Mcneil</h2>
+                <h2>Rob McNeil</h2>
                 <h3>50 points to offer</h3>
                 <p>rmcneil@scu.edu</p>
               </div>
