--- a/food-insecurity.html
+++ b/food-insecurity.html
@@ -9,7 +9,8 @@
   <link rel="stylesheet" href="css/styles-merged.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/custom.css">
-  <link rel="icon" href="img/icon.png">
+  <link rel="icon" type="image/png" href="img/favicon.png" sizes="16x16">
+  <link rel="icon" type="image/png" href="img/favicon.png" sizes="32x32">
 
   <!--[if lt IE 9]>
       <script src="js/vendor/html5shiv.min.js"></script>
