--- a/index.html
+++ b/index.html
@@ -116,9 +116,11 @@
             <div class="probootstrap-flex-block">
               <div class="probootstrap-text probootstrap-animate">
                 <h3>What is Bronco Share?</h3>
-                <p>Bronco Share is a platform for SCU students who have a
-                  surplus of dining points to offer some of those points to students with food insecurity
-                  in a more discrete fashion.</p>
+                <p>Bronco Share is a platform for finding SCU students who have a
+                  surplus of dining points who can offer some of those points to students with food insecurity
+                  in a more discrete fashion. Simply send a message to one of the students listed on the <a
+                    href="offers.html">Offers</a> page, and get connected quickly with someone who can offer their meal
+                  points!</p>
               </div>
             </div>
           </div>
